[package]
name = "yatp"
version = "0.0.1"
authors = ["The TiKV Authors"]
edition = "2018"
description = ""
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tikv/yatp/"

[dependencies]
num_cpus = "1.0"
parking_lot_core = "0.7"
crossbeam-deque = "0.7"
dashmap = "1.2.0"
rand = "0.7"
lazy_static = "1"
fail = "0.3"

[dependencies.prometheus]
# FIXME: Use crates-io version when rust-prometheus 0.8 is released
git = "https://github.com/tikv/rust-prometheus.git"
rev = "d919ccd35976b9b84b8d03c07138c1cc05a36087"

[features]
failpoints = ["fail/failpoints"]

[dev-dependencies]
criterion = "0.3"
tokio = { version = "0.2.0", features = ["sync", "rt-threaded"] }
async-std = "1.0"
threadpool = "1.0"

[[bench]]
name = "spawn_many"
harness = false

[[bench]]
name = "yield_many"
harness = false

[[bench]]
name = "chained_spawn"
harness = false

[[bench]]
name = "ping_pong"
harness = false

[profile.bench]
codegen-units = 1
