[package]
name = "yatp"
version = "0.0.1"
authors = ["The TiKV Authors"]
edition = "2018"
description = ""
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tikv/yatp/"

[dependencies]
crossbeam-deque = "0.7"
dashmap = "3.11.10"
fail = "0.4"
lazy_static = "1"
num_cpus = "1.0"
parking_lot_core = "0.8"
prometheus = { version = "0.10", default-features = false }
rand = "0.7"

[features]
failpoints = ["fail/failpoints"]

[dev-dependencies]
criterion = "0.3"
tokio = { version = "0.2.0", features = ["sync", "rt-threaded"] }
async-std = "1.0"
threadpool = "1.0"

[[bench]]
name = "spawn_many"
harness = false

[[bench]]
name = "yield_many"
harness = false

[[bench]]
name = "chained_spawn"
harness = false

[[bench]]
name = "ping_pong"
harness = false

[profile.bench]
codegen-units = 1
debug = true
