[package]
name = "yatp"
version = "0.0.1"
authors = ["The TiKV Authors"]
edition = "2018"
description = ""
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tikv/yatp/"

[dependencies]
crossbeam-deque = "0.8"
dashmap = "4.0"
fail = "0.5"
lazy_static = "1"
num_cpus = "1.0"
parking_lot_core = "0.9"
prometheus = { version = "0.13", default-features = false }
rand = "0.8"

[features]
failpoints = ["fail/failpoints"]

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
async-std = "1.0"
threadpool = "1.0"
futures-timer = "3"

[[bench]]
name = "spawn_many"
harness = false

[[bench]]
name = "yield_many"
harness = false

[[bench]]
name = "chained_spawn"
harness = false

[[bench]]
name = "ping_pong"
harness = false

[profile.bench]
codegen-units = 1
debug = true
